Fix overflow properties

--- a/gxa/src/main/webapp/resources/css/foundation/atlas.css
+++ b/gxa/src/main/webapp/resources/css/foundation/atlas.css
@@ -110,7 +110,7 @@ a.baseline {
 }
 
 .list-project-l {
-    overflow-y: auto;
+    overflow-y: scroll;
     height: 400px;
 }
 
