--- a/sc/src/main/webapp/resources/css/foundation/atlas.css
+++ b/sc/src/main/webapp/resources/css/foundation/atlas.css
@@ -17,7 +17,7 @@ a.clear {
 /* Copied from .hexagon in ebi-global.css */
 .atlas-logo {
     display: inline-block;
-    background: url("/gxa/resources/images/foundation/logos/logo_atlas_transparent.png") no-repeat;
+    background: url("/gxa_sc/resources/images/foundation/logos/logo_atlas_transparent.png") no-repeat;
     background-size: 60px;
     text-align: center;
     height: 70px;
@@ -110,8 +110,8 @@ a.baseline {
 }
 
 .list-project-l {
-    overflow-y: auto;
-    height: 400px;
+    overflow-y: scroll;
+    height: 300px;
 }
 
 .publication-list .icon-conceptual:before {
